--- a/pyflink_job/test_pyflink.ipynb
+++ b/pyflink_job/test_pyflink.ipynb
@@ -2,15 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: kafka-python in c:\\python312\\lib\\site-packages (2.0.5)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 24.3.1 -> 25.0.1\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
    "source": [
+    "%pip install kafka-python\n",
+    "\n",
     "import json\n",
     "from kafka import KafkaProducer\n",
     "\n",
     "# Kafka configuration\n",
-    "KAFKA_BROKER = 'localhost:9092'  # Replace with your Kafka broker address\n",
+    "KAFKA_BROKER = 'localhost:29092'  # Replace with your Kafka broker address\n",
     "TOPIC = 'input-topic'            # Replace with your Kafka topic name\n",
     "\n",
     "# Initialize Kafka producer\n",
@@ -22,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +88,7 @@
        " 'vin': 'P6WC2C1B5R1000105'}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -92,10 +112,10 @@
     {
      "data": {
       "text/plain": [
-       "<kafka.producer.future.FutureRecordMetadata at 0x7f79e9975cd0>"
+       "<kafka.producer.future.FutureRecordMetadata at 0x2c785d021e0>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +269,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
