updated udf fxn

--- a/pyflink_job/test_pyflink.ipynb
+++ b/pyflink_job/test_pyflink.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
        " 'vin': 'P6WC2C1B5R1000105'}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -112,10 +112,10 @@
     {
      "data": {
       "text/plain": [
-       "<kafka.producer.future.FutureRecordMetadata at 0x2c785d021e0>"
+       "<kafka.producer.future.FutureRecordMetadata at 0x2ad6a0c32f0>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
     "for record in records:\n",
     "    message = dict(zip(columns, record))  # Map columns to record values\n",
     "    producer.send(TOPIC, value=message)   # Send each message to Kafka\n",
-    "    print(f\"Produced: {message}\")\n"
+    "    print(f\"Produced: {message}\")"
    ]
   },
   {
@@ -251,6 +251,15 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
   }
  ],
  "metadata": {
